# crctk

./: ChangeLog  Makefile  Makefile.am  Makefile.crctk  Makefile.in  PKGBUILD  README  README.head  README.md  README.mkd  TODO  aclocal.m4  config.h.in  configure  configure.ac  crctk.c  index.html  realpath.c  realpath.h  realpathtest.c
bash-completion.d/: crctk
debs/: crctk_0.4.7_amd64.deb  crctk_0.4.8_amd64.deb
doc/: Makefile.am  Makefile.doc  Makefile.in  README.head  crctk.3  crctk.html  crctk.mkd  guide.mkd
include/: realpath.h
m4/: ChangeLog
man/: Makefile  Makefile.am  Makefile.in  crctk.3  crctk.mkd
pkg/DEBIAN/: control
po/: ChangeLog  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  crctk.pot  de.mo  de.po  en_GB.po
src/: Makefile.am  Makefile.in  color.c  color.h  command_calc.c  command_calc.h  command_calc_batch.c  command_calc_batch.h  command_check.c  command_check.h  command_check_batch.c  command_check_batch.h  command_check_hexstring.c  command_check_hexstring.h  command_delete.c  command_delete.h  command_help.c  command_help.h  command_idle.c  command_idle.h  command_list.c  command_list.h  command_merge.c  command_merge.h  command_remove_tag.c  command_remove_tag.h  command_store.c  command_store.h  command_tag.c  command_tag.h  command_to_realpaths.c  command_to_realpaths.h  crc.c  crc.h  crc32.c  crc32.h  crctk.c  crctk.h  database.c  database.h  (+12 more)
test/: Makefile.test  crc.cdb  newcrclibtest.c  random.bin.crc  unittest.sh
